--- a/src/app/pages/lote/lote.component.html
+++ b/src/app/pages/lote/lote.component.html
@@ -1,5 +1,104 @@
-<nz-result nzStatus="404" nzTitle="404" nzSubTitle="Lo sentimos, esta opción no esta disponible por el momento.">
-    <div nz-result-extra>
-        <!-- <button nz-button nzType="primary">Back Home</button> -->
-    </div>
-</nz-result>
+<h4 style="text-align: center;">MANTENIMIENTO LOTES DE EMISION</h4>
+<nz-card style="width:100%;" nzTitle="Filtros de búsqueda">
+    <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+        <div nz-row [nzGutter]="24">
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label nzFor="email">Fecha Inicio</nz-form-label>
+                    <nz-form-control nzErrorTip="The input is not valid E-mail!">
+                        <nz-date-picker style="width: 100%" formControlName="fecha" [(ngModel)]="fecIni" (ngModelChange)="onChange($event)"></nz-date-picker>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label nzFor="">Fecha Fin</nz-form-label>
+                    <nz-form-control nzErrorTip="The input is not valid E-mail!">
+                        <nz-date-picker style="width: 100%" formControlName="fecha" [(ngModel)]="fecFin" (ngModelChange)="onChange($event)"></nz-date-picker>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label>Tipo de Contribuyente</nz-form-label>
+                    <nz-form-control>
+                        <nz-select formControlName="tipoContri" name="select-validate" [(ngModel)]="tipoContrib">
+                            <nz-option *ngFor="let item of dataTipoContribuyente" [nzLabel]="item.descon" [nzValue]="item.tipcon"></nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div>
+        <div nz-row [nzGutter]="24">
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label>Tipo de Valor</nz-form-label>
+                    <nz-form-control>
+                        <nz-select formControlName="tipoValor" name="select-validate" [(ngModel)]="tipoValor">
+                            <nz-option *ngFor="let item of dataTipoValor" [nzLabel]="item.tva_descri" [nzValue]="item.tva_id"></nz-option>
+                            <!-- <nz-option nzValue="1" nzLabel="Impuesto Predial"></nz-option>
+                            <nz-option nzValue="3" nzLabel="Arbitrios"></nz-option> -->
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label>Sector</nz-form-label>
+                    <nz-form-control>
+                        <input type="text" nz-input formControlName="sector" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+
+        </div>
+        <!-- <div nz-row [nzGutter]="20">
+            <div nz-col class="gutter-row" [nzSpan]="12">
+                <nz-form-item>
+                    <nz-form-label nzRequired>Contribuyente &nbsp;</nz-form-label>
+                    <nz-form-control [nzSm]="4">
+                        <input id="note" type="text" nz-input formControlName="codigoContri" />
+                    </nz-form-control>
+                    <nz-form-label nzRequired><i nz-icon nzType="search" nzTheme="outline"></i> &nbsp;</nz-form-label>
+                    <nz-form-control [nzSm]="14">
+                        <input id="note" type="text" nz-input formControlName="nombreContri" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div> -->
+    </form>
+</nz-card>
+<nz-table [nzData]="dataLote" [nzShowPagination]="settingValue.pagination" [nzLoading]="settingValue.loading" [nzSize]="settingValue.size" [nzPageSize]="10">
+    <thead>
+        <tr>
+            <th style="text-align:center;">Proceso</th>
+            <th style="text-align:center;">Fecha</th>
+            <!-- <th style="text-align:center;">Tipo de Contribuyente</th> -->
+            <th style="text-align:center;">Tipo Valor</th>
+            <th style="text-align:center;">Año Ini.</th>
+            <th style="text-align:center;">Año Fin</th>
+            <th style="text-align:center;">Monto Ini.</th>
+            <th style="text-align:center;">Monto Fin</th>
+            <th style="text-align:center;">Cantidad</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of dataLote" id="row_data_proceso_{{data.pdl_id}}" class="proceso_selectable_row" (click)="changeActualDetalleProceso(data.pdl_id)" style="cursor:pointer;">
+            <td style="text-align:center;">{{data.elc_id}}</td>
+            <td style="text-align:center;">{{data.elc_fecpro | date:'Y-MM-dd'}}</td>
+            <!-- <td style="text-align:center;">{{data.pdl_tipcon}}</td> -->
+            <td style="text-align:center;">{{traduceTipVal(data.pdl_tipval)}}</td>
+            <td style="text-align:center;">{{data.elc_anoini}}</td>
+            <td style="text-align:center;">{{data.elc_anofin}}</td>
+            <td style="text-align:center;">S/ {{data.elc_monini | number: '1.2-2'}}</td>
+            <td style="text-align:center;">S/ {{data.elc_monfin | number: '1.2-2'}}</td>
+            <td style="text-align:center;">{{data.elc_cancon}}</td>
+        </tr>
+    </tbody>
+</nz-table>
+
+<button nz-button nzType="primary" [nzSize]="size" (click)="loadDataProceso()">Buscar</button>
+<button routerLink="/lote-emision" nz-button nzType="primary" [nzSize]="size">Nuevo</button>
+<button nz-button nzType="primary" [nzSize]="size">Anular</button>
+<button id="btn_detalle_proceso" nz-button nzType="primary" [nzSize]="size" (click)="detalleProceso()" disabled>Detalle</button>
+<button nz-button nzType="primary" [nzSize]="size">Excel</button>
