--- a/src/app/pages/lote/lote.component.html
+++ b/src/app/pages/lote/lote.component.html
@@ -6,7 +6,7 @@
                 <nz-form-item>
                     <nz-form-label nzFor="email">Fecha Inicio</nz-form-label>
                     <nz-form-control nzErrorTip="The input is not valid E-mail!">
-                        <nz-date-picker style="width: 100%" formControlName="fecha" [(ngModel)]="fecIni" (ngModelChange)="onChange($event)"></nz-date-picker>
+                        <nz-date-picker style="width: 100%" formControlName="fecha" [(ngModel)]="fecIni"></nz-date-picker>
                     </nz-form-control>
                 </nz-form-item>
             </div>
@@ -14,7 +14,7 @@
                 <nz-form-item>
                     <nz-form-label nzFor="">Fecha Fin</nz-form-label>
                     <nz-form-control nzErrorTip="The input is not valid E-mail!">
-                        <nz-date-picker style="width: 100%" formControlName="fecha" [(ngModel)]="fecFin" (ngModelChange)="onChange($event)"></nz-date-picker>
+                        <nz-date-picker style="width: 100%" formControlName="fecha" [(ngModel)]="fecFin"></nz-date-picker>
                     </nz-form-control>
                 </nz-form-item>
             </div>
